--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8B8LRJ3JK"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-C8B8LRJ3JK');
+    </script>
 
 <body>
     <!-- Hero Header -->
@@ -135,21 +144,6 @@
             </div>
         </footer>
     </main>
-
-    <!-- Minimal Google Analytics 4 – loads after everything else -->
-    <script>
-    setTimeout(function(){
-        var s = document.createElement('script');
-        s.src = 'https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX';
-        s.async = true;
-        document.head.appendChild(s);
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX', { send_page_view: false });
-        gtag('event', 'page_view');
-    }, 3000); // waits 3 seconds – zero impact on LCP
-    </script>
 </body>
 
 </html>
