Attempted to remove some of the things causing the issues

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
     <meta name="description" content="Custom 5-page websites for small businesses. From $497 one-time payment. Live in 7 days. Free hosting forever.">
 
     <!-- Preconnect for faster font loading -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
 
     <!-- Preload hero image (biggest LCP win) -->
-    <link rel="preload" href="assets/banner.webp" as="image">
-
-    <!-- High-priority hint for LCP -->
-    <link rel="preload" href="assets/banner.webp" as="image" fetchpriority="high">
+    <!-- <link rel="preload" href="assets/banner.webp" as="image"> -->
 
     <!-- Google Fonts – non-blocking -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Manrope:wght@300;400;500;600;700&display=swap" 
@@ -29,6 +26,7 @@
     <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8B8LRJ3JK"></script>
     <script>
