--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeskFlow Mobility - Professional Websites | From $497 One-Time</title>
     <meta name="description" content="Custom 5-page websites for small businesses. From $497 one-time payment. Live in 7 days. Free hosting forever.">
-
-    <!-- Preconnect for faster font loading -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-
-    <!-- Preload hero image (biggest LCP win) -->
-    <!-- <link rel="preload" href="assets/banner.webp" as="image"> -->
-
-    <!-- Google Fonts – non-blocking -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Manrope:wght@300;400;500;600;700&display=swap" 
-          rel="stylesheet" media="print" onload="this.media='all'">
-
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 
-    <!-- main CSS -->
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
     <!-- Google tag (gtag.js) -->
